<resources>
    <string name="app_name">whome</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="login">로그인</string>
    <string name="my_info">내 정보</string>
    <string name="setting">환경설정</string>
    <string name="logout">로그아웃</string>
    <string name="require_login">로그인해 주세요.</string>
    <string name="action_settings">Settings</string>
    <string name="mainimg">mainImg</string>
    <string name="userimg">userImg</string>
    <string name="home_img_gallery">home img gallery</string>
    <string name="slash">/</string>
    <string name="star">star_rate</string>
    <string name="logo">Whome</string>
    <string name="loding">loding..</string>
    <string name="home_location">숙소 위치</string>
    <string name="home_intro">숙소 소개</string>
    <string name="facility">편의 시설</string>
    <string name="host">호스트 : </string>
    <string name="detail_location">자세한 위치 보기</string>
    <string name="APP_TOUCH_BACK_BTN">뒤로 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="NO_CONNECTED_NETWORK">네트워크 상태를 확인해 주세요.</string>
    <string name="NO_CONNECTED_SERVER">서버와의 통신이 원활하지 않습니다.</string>
<!--    <string name="REAL_WHOME_REST_URL">http://192.168.0.75:8080/whomerest</string>-->
    <string name="REAL_WHOME_REST_URL">http://3.34.52.119/whomerest</string>
    <string name="GET_HOME_LIST">/gethomelist</string>
    <string name="GET_HOME_DETAIL">/gethomedetail</string>
    <string name="GET_REVIEW">/getHomeReview</string>
    <string name="USER_LOGIN">/userLogin</string>
    <string name="USER_JOIN">/userJoin</string>
    <string name="USER_UPDATE">/updateUserInfo</string>
    <string name="WEB_VIEW">/daum_addr_api</string>
    <string name="NULL_NAME">이름을 입력해주세요.</string>
    <string name="NULL_ID">아이디를 입력해주세요.</string>
    <string name="NULL_EMAIL">이메일을 입력해주세요.</string>
    <string name="NULL_PW">비밀번호를 입력해주세요.</string>
    <string name="NULL_PW_CHECK">비밀번호를 확인해주세요.</string>
    <string name="NULL_ADDR">주소를 입력해주세요.</string>
    <string name="NOT_PW_MATCH">비밀번호가 일치하지 않습니다.</string>
    <string name="INVALID_ID">아이디는 영문,숫자를 이용하여 4~10글자 입력하세요.</string>
    <string name="INVALID_PW">비밀번호는 영문자, 숫자를 혼합하여 8~16글자 이상 입력하세요.</string>
    <string name="INVALID_EMAIL">이메일 형식을 확인해주세요.</string>
    <string name="INVALID_PHONE">핸드폰번호 형식을 확인해주세요.</string>
    <string name="JOIN_COMPLETE">회원가입을 축하드립니다.</string>
    <string name="NOT_IMG_SELECTED">이미지가 선택되지 않았습니다.</string>
    <string name="USER_LOGOUT">로그아웃 하시겠습니까?</string>
    <string name="LOGOUT_COMPLETE">로그아웃 하셨습니다.</string>
</resources>