<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/login"/>
        <item
            android:id="@+id/my_info"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_info"
            android:visible="false"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_person_off_24"
            android:title="@string/logout"
            android:visible="false"/>
    </group>
</menu>